--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Journey Through Indian Art History</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="script" href="script.js"
+    <link rel="script" href="script.js">
 </head>
 <body>
     <div class="timeline-container">
@@ -80,6 +80,12 @@
             <img id="popup-image" src="" alt="Event Image">
         </div>
     </div>
+
+    <footer>
+        <p>&copy; 2024 Journey Through Indian Art History. All rights reserved.</p>
+        <p>Designed by:</p>
+        <p>Ashish Raj (Reg. No: RA2211003011617), Yuvraj Anand (Reg. No: RA2211003011654), Sonal Khatri (Reg. No: RA2211003011641), Aranya Mondal (Reg. No: RA2211003011641)</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
