--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <footer>
         <p>&copy; 2024 Journey Through Indian Art History. All rights reserved.</p>
         <p>Designed by:</p>
-        <p>Ashish Raj (Reg. No: RA2211003011617), Yuvraj Anand (Reg. No: RA2211003011654), Sonal Khatri (Reg. No: RA2211003011641), Aranya Mondal (Reg. No: RA2211003011641)</p>
+        <p>Ashish Raj (Reg. No: RA2211003011617), Yuvraj Anand (Reg. No: RA2211003011654), Sonal Khatri (Reg. No: RA2211003011616) & Aranya Mondal (Reg. No: RA2211003011641)</p>
     </footer>
 
     <script src="script.js"></script>
